<resources>
    <string name="app_name">Hillfort Tracker</string>

    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="hint_hillfortLocation">Location </string>

    <string name="button_addImage1"> Add First Image </string>
    <string name="button_addImage2"> Add Second Image </string>
    <string name="button_addImage3"> Add Third Image </string>
    <string name="button_addImage4"> Add Forth Image </string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="menu_addHillfort">Add</string>

    <string name="menu_cancelHillfort">Cancel</string>
    <string name="enter_hillfort_title"> Please enter a Hillfort Title </string>
    <string name="save_hillfort"> Save </string>
    <string name="change_hillfort_image">Change hillfort image</string>

    <string name="button_location">Set Location</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_settings">Update and Sign In</string>
    <string name="title_activity_map">Map of Hillforts</string>
    <string name="menu_cancelRegistration">Cancel</string>
    <string name="registration_error"> Enter All Fields</string>
    <string name="login_email_error"> Enter Email</string>
    <string name="login_password_error"> Enter Password</string>
    <string name="menu_deleteHillfort"> Delete</string>
    <string name="menu_up">Up</string>
    <string name="menu_save">Save</string>

    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>

    <string name="menu_showMap">Show Map</string>
    <string name="menu_logout">Logout</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Hillfort Tracker</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_addHillfort">Add Hillfort</string>
    <string name="title_activity_hillfort_home">Hillfort Home</string>

    <string name="title_activity_favourites">Favourites</string>
    <string name="action_settings">Account Settings</string>
    <string name="action_listHillforts">List All Hillforts</string>
    <string name="action_map">Map of Hillforts</string>
    <string name="action_favourites">Favourites</string>



    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>

    <string name="title_activity_login"> Signup/Login to Hillfort Tracker</string>


</resources>