<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_favourites"
        android:title="@string/action_favourites"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_logout_icon"
        android:title="Logout"
        app:showAsAction="always" />
</menu>